Fix: PopularTags on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,8 @@
   .display {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
+    overflow: hidden;
     width: 100%;
   }
 }
