--- a/src/components/style/NavBar.scss
+++ b/src/components/style/NavBar.scss
@@ -129,8 +129,10 @@
                     & h3 {
                         font-size: 1rem;
                         font-weight: 600;
+                        color: #fff;
                     }
                     & svg {
+                        color: #fff;
                         font-size: 1.5rem;
                     }
 
