--- a/src/pages/user/User.scss
+++ b/src/pages/user/User.scss
@@ -1,5 +1,5 @@
 .User {
-    display: grid;
+    margin: auto;
 
     width: 100%;
     max-width: 800px;
